# CRISP

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  nginx.conf  setup.sh  test_report.txt
include/core/: InterviewScheduler.h
include/platform/: database.h  web_server.h
scripts/: build.sh  crisp-platform.service  test.sh
src/: main.cpp
src/core/: InterviewScheduler.cpp
src/platform/: database.cpp  web_server.cpp
web/static/css/: style.css
webapp/: package-lock.json  package.json  test_report.txt
webapp/app/: page.tsx
webapp/app/api/schedule/: route.ts
webapp/app/components/: ConflictDashboard.tsx  ExportButtons.tsx  ScheduleTable.tsx  UploadForm.tsx
webapp/lib/: csv.test.ts  csv.ts  export.ts  scheduler.test.ts  scheduler.ts  types.ts
webapp/public/samples/: companies.csv  students.csv
